[profile.release]
strip = true
lto = true

[workspace]
members = [
    "iam",
    "iam-common",
    "iam-entity",
    "iam-migration",
    "iam-macros",
    "iam-cli",
    "libiam",
]
default-members = [
    "iam",
    "iam-migration",
    "iam-cli",
]
resolver = "2"

[workspace.package]
license-file = "./LICENSE"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", default-features = false, features = ["http2", "json", "macros", "tokio", "tracing"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false }
dotenvy = "0.15.7"
iam-common = { path = "./iam-common" }
iam-entity = { path = "./iam-entity" }
iam-macros = { path = "./iam-macros" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
mime = "0.3.17"
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "thread_rng"] }
sea-orm = { version = "1.1.19", default-features = false, features = ["macros", "runtime-actix-rustls", "sqlx-postgres", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.41", default-features = false }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
