[package]
name = "cmds"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
common = { path = "../common/" }
dotenvy = "0.15.6"
entity = { path = "../entity" }
sea-orm = { version = "0.10.6", default-features = false, features = ["runtime-actix-rustls", "sqlx-mysql"] }
tokio = { version = "1.23.0", features = ["rt", "macros"] }

[[bin]]
name = "seeder"
path = "src/seeder.rs"

[[bin]]
name = "password_hash"
path = "src/password_hash.rs"
