[package]
name = "cmds"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
iam-common = { path = "../iam-common/" }
dotenvy = "0.15.7"
iam-entity = { path = "../iam-entity" }
sea-orm = { version = "0.12.15", default-features = false, features = ["runtime-actix-rustls", "sqlx-mysql"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
libiam = { path = "../libiam" }

[[bin]]
name = "seeder"
path = "src/seeder.rs"

[[bin]]
name = "password_hash"
path = "src/password_hash.rs"

[[bin]]
name = "create_iam_app"
path = "src/create_iam_app.rs"
