[package]
name = "common"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
chrono = { version = "0.4.23", features = ["clock"], default-features = false }
uuid = { version = "1.2.2", features = ["v1", "rng"] }
sea-orm = { version = "0.10.6", default-features = false, features = ["runtime-actix-rustls", "sqlx-mysql"] }
tracing = { version = "0.1.37", default-features = false }
redis = { version = "0.22.1", features = ["aio", "tokio-comp", "connection-manager"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rust-argon2 = { version = "1.0.0", default-features = false }
bcrypt = "0.13.0"
thiserror = "1.0.38"
serde = "1.0.152"
once_cell = "1.16.0"
jsonwebtoken = "8.2.0"
