[package]
name = "iam-cli"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[[bin]]
name = "iam-cli"
path = "main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = { version = "4.5.11", features = ["cargo", "env"] }
dotenvy.workspace = true
ed25519-dalek.workspace = true
iam-common.workspace = true
iam-entity.workspace = true
k8s-openapi = { version = "0.22.0", features = ["earliest"] }
kube = "0.93.1"
libiam = { version = "0.1.0", path = "../libiam" }
rand.workspace = true
sea-orm.workspace = true
tokio.workspace = true
url = "2.5.2"
