[package]
name = "iam-common"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock"] }
uuid.workspace = true
sea-orm.workspace = true
tracing.workspace = true
rand.workspace = true
rust-argon2 = { version = "2.1.0", default-features = false }
bcrypt = "0.15.1"
serde.workspace = true
jsonwebtoken.workspace = true
axum.workspace = true
iam-macros.workspace = true
iam-entity.workspace = true
bytes = "1.6.1"
serde_json.workspace = true
mime.workspace = true
base64.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "rand_core"] }
jose-jwk = { version = "0.1.2", default-features = false }
