[package]
name = "iam-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license-file.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
chrono = { workspace = true, features = ["clock"] }
uuid.workspace = true
sea-orm.workspace = true
tracing.workspace = true
rand.workspace = true
rust-argon2 = { version = "3.0.0", default-features = false }
bcrypt = "0.17.1"
serde.workspace = true
jsonwebtoken.workspace = true
axum.workspace = true
iam-macros.workspace = true
iam-entity.workspace = true
bytes = "1.11.0"
serde_json.workspace = true
mime.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
jose-jwk = { version = "0.1.2", default-features = false }
anyhow.workspace = true
envconfig = "0.11.0"
tokio = { workspace = true, features = ["fs"] }
ring = { version = "0.17.14", features = ["std"] }
