[package]
name = "iam-migration"
version = "0.1.0"
edition = "2021"
publish = false
license-file.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "iam-migration"
path = "main.rs"

[dependencies]
sea-orm-migration = { version = "1.1.19" }
tokio.workspace = true
iam-entity.workspace = true
iam-common.workspace = true
chrono.workspace = true
