[package]
name = "iam-setup"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
anyhow = "1.0.86"
k8s-openapi = { version = "0.22.0", features = ["earliest"] }
kube = "0.92.1"
libiam = { version = "0.1.0", path = "../libiam" }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
url = "2.5.2"
