[package]
name = "iam"
version = "0.1.0"
edition = "2021"
publish = false
license-file.workspace = true

[lib]
path = "./lib.rs"

[[bin]]
name = "iam"
path = "main.rs"

[dependencies]
iam-entity.workspace = true
sea-orm = { workspace = true, features = ["mock"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["json"] }
rand.workspace = true
chrono.workspace = true
validator = { version = "0.18.1", features = ["derive"] }
async-trait.workspace = true
futures-util = "0.3.30"
tokio.workspace = true
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "auth", "compression-full", "cors", "decompression-full", "request-id", "sensitive-headers", "trace", "util"] }
hyper = "1.4.1"
http-body = "1.0.1"
iam-common.workspace = true
base64.workspace = true
dotenvy.workspace = true
uuid.workspace = true
pin-project-lite = "0.2.14"
headers = "0.4.0"
smallvec = "1.13.2"

[dev-dependencies]
mime.workspace = true
