[package]
name = "iam"
version = "0.1.0"
edition = "2024"
publish = false
license-file.workspace = true
default-run = "iam"

[lib]
path = "./lib.rs"

[[bin]]
name = "iam"
path = "main.rs"

[dependencies]
iam-entity.workspace = true
sea-orm = { workspace = true, features = ["mock"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["json"] }
rand.workspace = true
chrono.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
async-trait.workspace = true
futures-util = "0.3.31"
tokio.workspace = true
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["add-extension", "compression-full", "cors", "decompression-full", "request-id", "sensitive-headers", "trace", "util", "normalize-path"] }
hyper = "1.8.1"
iam-common.workspace = true
base64.workspace = true
dotenvy.workspace = true
uuid.workspace = true
pin-project-lite = "0.2.16"
headers = "0.4.1"
smallvec = "1.15.1"
serde_urlencoded = "0.7.1"
anyhow.workspace = true

[dev-dependencies]
mime.workspace = true
