[package]
name = "libiam"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.62"
iam-common.workspace = true
iam-entity.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tokio.workspace = true
futures = "0.3.30"
async-trait.workspace = true
jsonwebtoken.workspace = true
anyhow.workspace = true
