[package]
name = "libiam"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
iam-common.workspace = true
iam-entity.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tokio.workspace = true
futures = "0.3.31"
async-trait.workspace = true
jsonwebtoken.workspace = true
anyhow.workspace = true
