[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.9.2" }
tokio = { version = "1.19.2", features = ["rt", "macros"] }
entity = { path = "../entity" }
common = { path = "../common" }
chrono = "0.4.19"
