[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
license-file.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.9.3" }
tokio = { version = "1.21.2", features = ["rt", "macros"] }
entity = { path = "../entity" }
common = { path = "../common" }
chrono = "0.4.22"
