[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
license-file.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.10.6" }
tokio = { version = "1.24.1", features = ["rt", "macros"] }
entity = { path = "../entity" }
common = { path = "../common" }
chrono = { version = "0.4.23", default-features = false }
